<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/camera_test"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aliyun.artc.api.basicusage.CameraCommonControl.CameraActivity">

    <LinearLayout
        android:id="@+id/ll_channel_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ll_channel_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_chat_channel_desc" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_channel_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="12dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/channel_id_label"
                android:layout_marginEnd="16dp"/>
            <EditText
                android:id="@+id/channel_id_input"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="text"
                android:text=""
                android:padding="5dp"
                android:textSize="15sp"
                android:background="@drawable/edittext_border" />

            <TextView
                android:id="@+id/join_room_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/video_chat_join_room"
                android:paddingHorizontal="16dp"
                android:layout_marginStart="12dp"
                android:gravity="center"
                android:padding="10dp"
                android:background="@color/layout_base_blue"
                android:minWidth="80dp" />
        </LinearLayout>

    </LinearLayout>

    <!-- 摄像头控制区域 -->
    <LinearLayout
        android:id="@+id/ll_camera_controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintTop_toBottomOf="@+id/ll_channel_layout">

        <!-- 摄像头控制 -->
        <Button
            android:id="@+id/switchCameraButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Switch_camera"
            android:textSize="15sp"
            android:padding="8dp"
            android:background="@color/layout_base_blue" />

        <!-- 摄像头缩放控制 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zoom_factor"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/zoomFactorValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="1.0"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:gravity="center"
                android:minWidth="40dp" />

            <SeekBar
                android:id="@+id/zoomSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <!-- 摄像头曝光控制 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Exposure_compensation"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp" />

            <TextView
                android:id="@+id/exposureValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.0"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:minWidth="40dp" />

            <SeekBar
                android:id="@+id/exposureSeekBar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <!-- 手动对焦和曝光 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/camera_exposure_point_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_gravity="center"
                android:text="@string/camera_exposure_point_label"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:maxLines="2"
                android:ellipsize="end"

                android:singleLine="false" />

            <TextView
                android:id="@+id/exposure_point_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="x"
                android:padding="5dp"
                android:textSize="15sp"
                android:background="@drawable/edittext_border" />

            <TextView
                android:id="@+id/exposure_point_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="y"
                android:padding="5dp"
                android:textSize="15sp"
                android:background="@drawable/edittext_border" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/camera_focus_point_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:layout_gravity="center"
                android:text="@string/camera_focus_point_label"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:maxLines="2"
                android:ellipsize="end"
                android:singleLine="false" />

            <TextView
                android:id="@+id/focus_point_x"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="x"
                android:padding="5dp"
                android:textSize="15sp"
                android:background="@drawable/edittext_border" />

            <TextView
                android:id="@+id/focus_point_y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="y"
                android:padding="5dp"
                android:textSize="15sp"
                android:background="@drawable/edittext_border" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/camera_auto_focus"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/camera_auto_face_focus_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <!-- 闪光灯控制 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/flash"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginEnd="10dp" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/camera_flash_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_video_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/ll_camera_controls"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <LinearLayout
            android:id="@+id/video_layout_1"
            android:layout_width="match_parent"
            android:layout_height="192dp"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/fl_local"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <FrameLayout
                android:id="@+id/fl_remote"
                android:layout_marginStart="5dp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>